 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 4
============

* [cdunde]: Added a new function, to the Faces RMB menu, for a "Empty Component" to start fresh from.

* [DanielPharos]: Added option to stop texturename checks. Be careful: this will allow you to use
          - illegal textures without any warning!

* [cdunde]: To move Make New Component menu function from Commands menu to RMB Face Commands menu and
          - also add to it new functions to:
          - move selected faces from one component to another,
          - copy selected faces from one component to another and
          - delete selected faces from the currently selected component.

* [DanielPharos]: Build-in an Allowed Parent check. Items shouldn't be able to be dropped somewhere
          - where they don't belong.

* [cdunde]: Created a new function on the Commands menu and RMB editor & tree-view menus to create a new
          - model component from selected Model Mesh faces and remove them from their current component.
          - Fixed error of "Pass face selection to Skin-view" if a face selection is made in the editor
          - before the Skin-view is opened at least once in that session.
          - Fixed redrawing of handles in areas that hints show once they are gone.

* [cdunde]: Changed "Pass Face Selection to Skin-view" to real time updating and
          - added function to Sync Face Selection in the Editor to the Skin-view.

* [DanielPharos]: OpenGL renderer shouldn't cause weird line-erasing when a tooltip disappears anymore.

* [cdunde]: Setup Model Editor views vertex "Pick and Move" functions with two different movement methods.
