@@ -12,18 +12,7 @@ QQRKSRC1
     ToolBox = "Texture Browser..."
     Root = "HL2 CS Textures.qtxfolder"
 
-    //Allows Texture Browser and game to run but not needed except to compile map
-    t_hl2cs:incl =      {  v="QuArKApps" path="cstrike/materials/"}
-
-    //access via gcf file loader (steam must not be running in online mode)
-    //t_hl2cs:incl =      {  v="steamapps/counter-strike source shared.gcf" path="cstrike/materials/"}
-
-    //access via steam (steam must be running)
-    //t_hl2cs:incl =      {  v="steamaccess://240" path="cstrike/materials/"}
-    
-    //plain file access
-    //t_hl2cs:incl =    {  v="tmpQuArK/materials_from_cs_source_shared"}
-
+    t_hl2cs:incl =      {  v="QuArKApps" path="cstrike/materials/" PakFile="counter-strike source shared.gcf"}
 
     HL2 CS Textures.qtxfolder =
     {
