@@ -10,8 +10,7 @@ QQRKSRC1
     ToolBox = "Texture Browser..."
     Root = "HL2 Textures.qtxfolder"
 
-    //Allows Texture Browser and game to run but not needed except to compile map
-    t_hl2:incl =      {  v="QuArKApps" path="hl2/materials/"}  // current line used
+    t_hl2:incl =      {  v="QuArKApps" path="hl2/materials/" PakFile="source materials.gcf"}
 
     HL2 Textures.qtxfolder =
     {
